<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="V for Vendetta"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/iv_imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/tv_details_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:paddingTop="5dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_details_cast_left"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_imageView1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cast_details"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_details_cast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_imageView1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_details_cast_left"
            android:text="@string/actor_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_details_releasedate_left"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_cast_left"
            android:layout_below="@id/tv_details_cast"
            android:layout_marginTop="10dp"
            android:text="@string/date_left"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_details_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_cast"
            android:layout_below="@id/tv_details_cast"
            android:layout_marginTop="10dp"
            android:text="@string/date_details"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_details_ratings_left"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_details_releasedate_left"
            android:layout_below="@+id/tv_details_releasedate"
            android:layout_marginTop="8dp"
            android:text="@string/ratings_left"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_details_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_details_releasedate"
            android:layout_below="@+id/tv_details_releasedate"
            android:layout_marginTop="8dp"
            android:text="@string/rating_details"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_details_audiencescore_left"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_ratings_left"
            android:layout_below="@id/tv_details_ratings"
            android:layout_marginTop="8dp"
            android:text="@string/audience_score_left"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_details_audiencescore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_ratings"
            android:layout_below="@id/tv_details_ratings"
            android:layout_marginTop="8dp"
            android:text="@string/rating_details"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_details_synopsis_left"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_audiencescore_left"
            android:layout_below="@id/tv_details_audiencescore"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/story_left" />

        <TextView
            android:id="@+id/tv_details_synopsis"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_details_audiencescore"
            android:layout_below="@id/tv_details_audiencescore"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/synopsis_details" />
    </RelativeLayout>

</ScrollView>